Add objective to balance academic levels in each class
Ensure that the distribution of academic levels are roughly
the same across classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(genetic
 	main.cpp
 	fitness.cpp
 	grade.cpp
+	histogram.cpp
 )
 
 target_link_libraries(genetic ${GALIB_LIBRARIES})
