Import student data in json format
* Data is read from stdin in json format
* Associated script (mkdata.py) generates random json data
* Changed GA params to get better results

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(genetic
 target_link_libraries(genetic ${GALIB_LIBRARIES})
 
 add_library(school-grade
+	grade.cpp
 	fitness.cpp
 )
 
